# wopo

./: LICENSE  LICENSE.md  README.md  setup.py
wopo/: agent.py  consolidator.py  minifier.py  prompts.py  pyproject.toml  setup.cfg  wopo.py
wopo/wopo/: agent.py  prompts.py  wopo.py
