[metadata]
name = promptimizer
version = 0.0.1
author = Tanishk Kithannae
author_email = tanishk.kithannae@wordlabs.io
description = Open source library for automated prompt optimisation
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires = 
    prefect >= 2.11.1
    pandas
    tqdm
